@@ -1,7 +1,7 @@
 AC_PREREQ(2.52)
-AC_INIT(ghex, 1.99.2, http://bugzilla.gnome.org/enter_bug.cgi?product=ghex)
+AC_INIT(ghex, 1.99.2.1, http://bugzilla.gnome.org/enter_bug.cgi?product=ghex)
 AC_CONFIG_SRCDIR(src/ghex-window.c)
-AM_INIT_AUTOMAKE(ghex, 1.99.2)
+AM_INIT_AUTOMAKE(ghex, 1.99.2.1)
 AM_CONFIG_HEADER(config.h)
 
 AM_MAINTAINER_MODE
